--- a/Kestrel.Server/Kestrel.Server.csproj
+++ b/Kestrel.Server/Kestrel.Server.csproj
@@ -6,6 +6,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
         <PublishAot>true</PublishAot>
+        <AssemblyName>KestrelServer</AssemblyName>
     </PropertyGroup>
-
+    <ItemGroup>
+        <PackageReference Include="SuperSocket.IOCPTcpChannelCreatorFactory" Version="2.0.0-beta.18.200" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Kestrel.Core\Kestrel.Core.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <RdXmlFile Include="rd.xml" />
+    </ItemGroup>
 </Project>
