--- a/SocketServer/appsettings.json
+++ b/SocketServer/appsettings.json
@@ -1,24 +1,25 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
+
   "ServerOptions": {
-    "Name": "PerformanceTest",
+    "Name": "PerformanceTest.Server",
+    //最大接受封包 1m
     "MaxPackageLength": 1048576,
     "ReceiveBufferSize": 8192,
     "SendBufferSize": 8192,
     "ReceiveTimeout": 1000,
     "SendTimeout": 1000,
-    "ClearIdleSessionInterval": 60, //60秒检测一次空闲客户端
-    "IdleSessionTimeOut": 120, //清理超过120秒无活动的客户端
     "Listeners": [
       {
         "Ip": "Any",
-        "Port": 8081
+        "Port": 8081,
+        "BackLog": 65535
       }
     ]
   }
