--- a/Kestrel.Server/appsettings.json
+++ b/Kestrel.Server/appsettings.json
@@ -5,21 +5,23 @@
       "Microsoft.AspNetCore": "Debug"
     }
   },
-  "AllowedHosts": "*",
-  "ServerOptions": {
-    "Name": "PerformanceTest",
-    "MaxPackageLength": 1048576,
-    "ReceiveBufferSize": 8192,
-    "SendBufferSize": 8192,
-    "ReceiveTimeout": 1000,
-    "SendTimeout": 1000,
-    "ClearIdleSessionInterval": 60, //60秒检测一次空闲客户端
-    "IdleSessionTimeOut": 120, //清理超过120秒无活动的客户端
-    "Listeners": [
-      {
-        "Ip": "Any",
-        "Port": 8081
-      }
-    ]
-  }
+  "AllowedHosts": "*"
 }
+
+
+//  "ServerOptions": {
+//    "Name": "PerformanceTest",
+//    "MaxPackageLength": 1048576,
+//    "ReceiveBufferSize": 8192,
+//    "SendBufferSize": 8192,
+//    "ReceiveTimeout": 1000,
+//    "SendTimeout": 1000,
+//    "ClearIdleSessionInterval": 60, //60秒检测一次空闲客户端
+//    "IdleSessionTimeOut": 120, //清理超过120秒无活动的客户端
+//    "Listeners": [
+//      {
+//        "Ip": "Any",
+//        "Port": 8081
+//      }
+//    ]
+//  }
