--- a/Kestrel.Core/Kestrel.Core.csproj
+++ b/Kestrel.Core/Kestrel.Core.csproj
@@ -5,13 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Bedrock.Framework" Version="0.1.63-alpha.gf69fa1b135" />
-        <PackageReference Include="MemoryPack" Version="1.10.0"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="SuperSocket.ProtoBase" Version="2.0.0-beta.19.424" />
         <PackageReference Include="System.IO.Pipelines" Version="8.0.0"/>
         <PackageReference Include="Google.Protobuf" Version="3.25.2"/>
-        <PackageReference Include="SuperSocket" Version="2.0.0-beta.19.424" />
         <PackageReference Include="Grpc.Tools" Version="2.60.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
