--- a/Kestrel.Server/Kestrel.Server.csproj
+++ b/Kestrel.Server/Kestrel.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
         <AssemblyName>KestrelServer</AssemblyName>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="SuperSocket.IOCPTcpChannelCreatorFactory" Version="2.0.0-beta.18.200" />
