--- a/Kestrel.Server/Kestrel.Server.csproj
+++ b/Kestrel.Server/Kestrel.Server.csproj
@@ -19,4 +19,9 @@
     <ItemGroup>
         <RdXmlFile Include="rd.xml" />
     </ItemGroup>
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 </Project>
